--- a/react-crash-course/package.json
+++ b/react-crash-course/package.json
@@ -26,11 +26,12 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "framer-motion": "^11.3.31",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-appwrite": "^0.5.0",
+    "react-native-appwrite": "^0.2.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
