--- a/react-crash-course/tsconfig.json
+++ b/react-crash-course/tsconfig.json
@@ -1,16 +1,4 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "strict": true,
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "app/_layout.jsx"
-  ]
+  "compilerOptions": {},
+  "extends": "expo/tsconfig.base"
 }
