--- a/nanosattracker_application/package.json
+++ b/nanosattracker_application/package.json
@@ -16,12 +16,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-firebase/app": "^20.4.0",
-    "@react-native-firebase/auth": "^20.4.0",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.28",
+    "expo": "^51.0.34",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-linear-gradient": "~13.0.2",
@@ -31,7 +31,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "firebase": "^10.13.1",
+    "firebase": "^10.14.0",
     "framer-motion": "^11.4.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -39,12 +39,12 @@
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-gifted-charts": "^1.4.40",
+    "react-native-gifted-charts": "^1.4.43",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "^15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10"
   },
