--- a/nanosattracker_application/package.json
+++ b/nanosattracker_application/package.json
@@ -33,6 +33,7 @@
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.14.0",
     "framer-motion": "^11.4.0",
+    "metro": "^0.80.12",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -55,6 +56,7 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
