--- a/nanosattracker_application/package.json
+++ b/nanosattracker_application/package.json
@@ -15,51 +15,52 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.20.17",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "expo": "^52.0.23",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.2",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo": "^53.0.19",
+    "expo-constants": "~17.1.7",
+    "expo-font": "~13.3.2",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.3",
+    "expo-splash-screen": "^0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
+    "expo-web-browser": "~14.2.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.4.0",
-    "metro": "^0.81.0",
+    "metro": "^0.82.5",
     "nativewind": "^2.0.11",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "^0.79.5",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-charts": "^1.4.43",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.5.1",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.0.7",
+    "@types/react": "~19.0.10",
+    "@types/react-test-renderer": "^19.0.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~53.0.9",
     "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "19.0.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
