--- a/nanosattracker_application/package.json
+++ b/nanosattracker_application/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/metro-config": "^0.20.17",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
     "@react-navigation/native": "^7.0.14",
