--- a/nanosattracker_application/package.json
+++ b/nanosattracker_application/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -17,11 +17,13 @@
   "dependencies": {
     "@expo/metro-config": "^0.20.17",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-firebase/app": "^23.3.0",
+    "@react-native-firebase/auth": "^23.3.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "expo": "^53.0.20",
+    "expo-build-properties": "^0.14.8",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
@@ -31,7 +33,6 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
-    "firebase": "^10.14.1",
     "framer-motion": "^11.4.0",
     "metro": "^0.82.5",
     "nativewind": "^2.0.11",
